--- a/html/trangchu.html
+++ b/html/trangchu.html
@@ -97,9 +97,9 @@
           </div>
           <div class="carousel-item">
             <img
-              alt="20.11 Promotion"
+              alt="Superpay Promotion"
               class="d-block w-100"
-              src="https://www.bambooairways.com/documents/20122/2241960/1920x770-vi-20.11.jpg/e3803adc-45cb-7d01-121d-bbae64a54a91?t=1763342573063"
+              src="https://www.bambooairways.com/documents/20122/2253849/1920x770-vi-superapp.jpg/294a3975-3f2f-3a88-140d-cb839a538217?t=1764319886679"
             />
           </div>
         </div>
