--- a/html/Khampha/Uudai.html
+++ b/html/Khampha/Uudai.html
@@ -104,7 +104,7 @@
             alt="superapp"
           />
           <div class="card-body">
-            <p class="card-text">Chi tiết</p>
+            <a href=""><p class="card-text">Chi tiết</p></a>
           </div>
         </div>
         <div class="card uudai-card">
@@ -114,7 +114,7 @@
             alt="midnight"
           />
           <div class="card-body">
-            <p class="card-text">Chi tiết</p>
+            <a href=""><p class="card-text">Chi tiết</p></a>
           </div>
         </div>
         <div class="card uudai-card">
@@ -124,7 +124,7 @@
             alt="momo2026PayPromotion"
           />
           <div class="card-body">
-            <p class="card-text">Chi tiết</p>
+            <a href=""><p class="card-text">Chi tiết</p></a>
           </div>
         </div>
       </div>
