--- a/html/trangchu.html
+++ b/html/trangchu.html
@@ -237,17 +237,17 @@
       <div class="container-2">
         <div class="card" style="width: 18rem">
           <img
-            alt="Ẩm thực bamboo airways"
+            alt="bảo hiểm bamboo airways"
             class="card-img-top"
-            src="https://www.bambooairways.com/documents/20122/1508851/362x230.jpg/1fb8409e-b9ff-e525-457c-69b4a60d1e0d?t=1702261405124"
+            src="https://www.bambooairways.com/documents/20122/1221328/b%E1%BA%A3o-hi%E1%BB%83m-bamboo-care.jpg/7553c391-69f8-d48b-740e-2148ab2e3a7e?t=1697599496388"
           />
           <div class="card-body">
             <a href="">
-              <h5 class="card-title">Dịch vụ ẩm thực</h5>
+              <h5 class="card-title">Bảo hiểm du lịch BambooCare</h5>
             </a>
             <p class="card-text">
-              Thưởng thức dịch vụ ẩm thực tuỳ chọn trực tiếp trên chuyến bay của
-              Bamboo Airways.
+              Gác lại âu lo trong suốt hành trình của bạn với dịch vụ bảo hiểm
+              du lịch.
             </p>
           </div>
         </div>
