--- a/html/Uudai/pay-promo.html
+++ b/html/Uudai/pay-promo.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="vi">
   <head>
     <meta charset="utf-8" />
@@ -22,6 +23,7 @@
     <link href="../../css/Uudai/pay-promo.css" rel="stylesheet" />
     <link href="../../css/navbar.css" rel="stylesheet" />
     <link href="../../css/footer.css" rel="stylesheet" />
+    <link rel="stylesheet" href="../../css/breadcrumb.css" />
   </head>
   <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
@@ -42,7 +44,7 @@
               <a class="nav-link" href="../Khampha/khampha.html"> Khám phá </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#"> Đặt vé </a>
+              <a class="nav-link" href=""> Đặt vé </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#"> Thông tin hành trình </a>
@@ -83,6 +85,21 @@
         </div>
       </div>
     </div>
+    <nav class="breadcrumb-nav container-fluid" aria-label="breadcrumb">
+      <div class="container breadcrumb-container">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item">
+            <a href="../trangchu.html">Trang chủ</a>
+          </li>
+          <li class="breadcrumb-item">
+            <a href="../Khampha/Uudai.html">Ưu đãi</a>
+          </li>
+          <li class="breadcrumb-item active" aria-current="page">
+            Ưu đãi MoMo
+          </li>
+        </ol>
+      </div>
+    </nav>
     <div class="main-content momo-page content-container">
       <h2 class="text-center momo-title">
         Chọn Bamboo, Quét Momo – Bay Tiết Kiệm Hơn!
