--- a/html/Uudai/sleep.html
+++ b/html/Uudai/sleep.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="vi">
   <head>
     <meta charset="utf-8" />
@@ -11,7 +12,7 @@
     <link href="https://fonts.googleapis.com" rel="preconnect" />
     <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;600;700&amp;display=swap"
       rel="stylesheet"
     />
     <link
@@ -22,6 +23,7 @@
     <link href="../../css/Uudai/sleep.css" rel="stylesheet" />
     <link href="../../css/navbar.css" rel="stylesheet" />
     <link href="../../css/footer.css" rel="stylesheet" />
+    <link rel="stylesheet" href="../../css/breadcrumb.css" />
   </head>
   <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
@@ -42,7 +44,7 @@
               <a class="nav-link" href="../Khampha/khampha.html"> Khám phá </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#"> Đặt vé </a>
+              <a class="nav-link" href=""> Đặt vé </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#"> Thông tin hành trình </a>
@@ -83,6 +85,21 @@
         </div>
       </div>
     </div>
+    <nav class="breadcrumb-nav container-fluid" aria-label="breadcrumb">
+      <div class="container breadcrumb-container">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item">
+            <a href="../trangchu.html">Trang chủ</a>
+          </li>
+          <li class="breadcrumb-item">
+            <a href="../Khampha/Uudai.html">Ưu đãi</a>
+          </li>
+          <li class="breadcrumb-item active" aria-current="page">
+            Midnight Ưu Đãi
+          </li>
+        </ol>
+      </div>
+    </nav>
     <div class="main-content midnight-page content-container">
       <h2 class="text-center midnight-title">
         Đêm chưa ngủ, Tranh thủ săn deal
@@ -219,7 +236,7 @@
             </div>
           </div>
           <div class="dieukhoanphaply-footer">
-            <h5>Điều khoản & Pháp lý</h5>
+            <h5>Điều khoản &amp; Pháp lý</h5>
             <div class="bambooairways-footer-choice">
               <a href="../Dieukhoan/dieukhoan.html">
                 Điều khoản sử dụng website
