--- a/html/dichvubotro/baohiem.html
+++ b/html/dichvubotro/baohiem.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="vi">
   <head>
     <meta charset="utf-8" />
@@ -22,6 +23,7 @@
     <link href="../../css/dichvubotro/baohiem.css" rel="stylesheet" />
     <link href="../../css/navbar.css" rel="stylesheet" />
     <link href="../../css/footer.css" rel="stylesheet" />
+    <link rel="stylesheet" href="../../css/breadcrumb.css" />
   </head>
   <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
@@ -86,6 +88,18 @@
         </div>
       </div>
     </div>
+    <nav class="breadcrumb-nav container-fluid" aria-label="breadcrumb">
+      <div class="container breadcrumb-container">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item">
+            <a href="../trangchu.html">Trang chủ</a>
+          </li>
+          <li class="breadcrumb-item active" aria-current="page">
+            Bảo hiểm du lịch BambooCARE
+          </li>
+        </ol>
+      </div>
+    </nav>
     <div class="main-content insurance-page content-container">
       <h2 class="main-title">Bảo hiểm du lịch BambooCARE</h2>
       <h3 class="section-title">GIỚI THIỆU</h3>
