--- a/html/dichvubotro/chongoiyeuthich.html
+++ b/html/dichvubotro/chongoiyeuthich.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="vi">
   <head>
     <meta charset="utf-8" />
@@ -22,6 +23,7 @@
     <link href="../../css/dichvubotro/chongoiyeuthich.css" rel="stylesheet" />
     <link href="../../css/navbar.css" rel="stylesheet" />
     <link href="../../css/footer.css" rel="stylesheet" />
+    <link rel="stylesheet" href="../../css/breadcrumb.css" />
   </head>
   <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
@@ -83,6 +85,18 @@
         </div>
       </div>
     </div>
+    <nav class="breadcrumb-nav container-fluid" aria-label="breadcrumb">
+      <div class="container breadcrumb-container">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item">
+            <a href="../trangchu.html">Trang chủ</a>
+          </li>
+          <li class="breadcrumb-item active" aria-current="page">
+            Chọn chỗ ngồi yêu thích
+          </li>
+        </ol>
+      </div>
+    </nav>
     <div class="main-content seat-selection-page content-container">
       <h2 class="main-title">Chọn chỗ ngồi yêu thích</h2>
       <p class="intro-text">
@@ -215,13 +229,13 @@
       <h3 class="section-title">Sơ đồ chỗ ngồi tham khảo</h3>
       <h5>A320 NEO</h5>
       <img
-        src="https://www.bambooairways.com/documents/d/global/seatmap-a320neo-jpg-2"
         alt="A320 NEO"
+        src="https://www.bambooairways.com/documents/d/global/seatmap-a320neo-jpg-2"
       />
       <h5>A321 CEO</h5>
       <img
-        src="https://www.bambooairways.com/documents/d/global/seatmap-a321-ceo-1-jpg"
         alt="A320 NEO"
+        src="https://www.bambooairways.com/documents/d/global/seatmap-a321-ceo-1-jpg"
       />
     </div>
     <footer>
