--- a/html/dichvubotro/baohiem.html
+++ b/html/dichvubotro/baohiem.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html lang="vi">
   <head>
     <meta charset="utf-8" />
@@ -12,7 +11,7 @@
     <link href="https://fonts.googleapis.com" rel="preconnect" />
     <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;600;700&amp;display=swap"
+      href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
     <link
@@ -23,7 +22,7 @@
     <link href="../../css/dichvubotro/baohiem.css" rel="stylesheet" />
     <link href="../../css/navbar.css" rel="stylesheet" />
     <link href="../../css/footer.css" rel="stylesheet" />
-    <link rel="stylesheet" href="../../css/breadcrumb.css" />
+    <link href="../../css/breadcrumb.css" rel="stylesheet" />
   </head>
   <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
@@ -44,23 +43,28 @@
               <a class="nav-link" href="../Khampha/khampha.html"> Khám phá </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href=""> Đặt vé </a>
+              <a class="nav-link" href="../Mangduongbay.html">
+                Thông tin hành trình
+              </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#"> Thông tin hành trình </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#"> Bamboo Club </a>
+              <a class="nav-link" href="../BambooClub/GioithieuQuyenloi.html">
+                Bamboo Club
+              </a>
             </li>
           </ul>
         </div>
         <div class="navbar-right">
           <ul class="navbar-nav right-menu">
             <li class="signin-li">
-              <a class="signin-option-navbar" href="#"> Đăng nhập </a>
+              <a class="signin-option-navbar" href="../dangnhap.html">
+                Đăng nhập
+              </a>
             </li>
             <li>
-              <a class="signup-option-navbar" href="#"> Đăng ký </a>
+              <a class="signup-option-navbar" href="../dangky.html">
+                Đăng ký
+              </a>
             </li>
             <li>
               <img
@@ -88,13 +92,13 @@
         </div>
       </div>
     </div>
-    <nav class="breadcrumb-nav container-fluid" aria-label="breadcrumb">
+    <nav aria-label="breadcrumb" class="breadcrumb-nav container-fluid">
       <div class="container breadcrumb-container">
         <ol class="breadcrumb">
           <li class="breadcrumb-item">
-            <a href="../trangchu.html">Trang chủ</a>
+            <a href="../trangchu.html"> Trang chủ </a>
           </li>
-          <li class="breadcrumb-item active" aria-current="page">
+          <li aria-current="page" class="breadcrumb-item active">
             Bảo hiểm du lịch BambooCARE
           </li>
         </ol>
@@ -182,13 +186,6 @@
         hơn. Nó đảm bảo rằng quý khách nhận được giá trị tốt nhất cho bảo hiểm
         du lịch của mình, với phạm vi bảo hiểm được tùy chỉnh theo nhu cầu của
         bạn.
-      </p>
-      <p>
-        <span class="text-primary fw-bold"> ⇒ Tham khảo </span>
-        <a class="text-decoration-none fw-bold" href="#">
-          Điều khoản và Điều kiện
-        </a>
-        chi tiết.
       </p>
       <h3 class="section-title mt-5">HƯỚNG DẪN XUẤT HOÁ ĐƠN</h3>
       <p>
@@ -323,30 +320,22 @@
           <div class="bambooairways-footer">
             <h5>Bamboo Airways</h5>
             <div class="bambooairways-footer-choice">
-              <a href="../BambooAirways/gioithieu.html">
+              <a href="BambooAirways/gioithieu.html">
                 Giới thiệu về Bamboo Airways
               </a>
-              <a href="../BambooAirways/thongdiep.html">
+              <a href="BambooAirways/thongdiep.html">
                 Thông điệp của Bamboo Airways
               </a>
-              <a href="../BambooAirways/nhandienthuonghieu.html">
+              <a href="BambooAirways/nhandienthuonghieu.html">
                 Nhận diện thương hiệu
               </a>
             </div>
           </div>
           <div class="dieukhoanphaply-footer">
-            <h5>Điều khoản &amp; Pháp lý</h5>
+            <h5>Điều khoản & Pháp lý</h5>
             <div class="bambooairways-footer-choice">
-              <a href="../Dieukhoan/dieukhoan.html">
+              <a href="Dieukhoan/dieukhoan.html">
                 Điều khoản sử dụng website
-              </a>
-            </div>
-          </div>
-          <div class="camnangdulich-footer">
-            <h5>Cẩm nang Du lịch</h5>
-            <div class="bambooairways-footer-choice">
-              <a href="../Camnangdulich/tipdulich.html">
-                Chia sẻ Mẹo (Tips Du Lịch)
               </a>
             </div>
           </div>
