--- a/html/trangchu.html
+++ b/html/trangchu.html
@@ -280,6 +280,50 @@
           </div>
         </div>
       </div>
+      <div class="dich-vu-bo-tro-h2-container">
+        <h3 class="dich-vu-bo-tro-h2">VÉ MÁY BAY</h3>
+      </div>
+      <div class="container-2">
+        <div class="card" style="width: 18rem">
+          <div class="card-body">
+            <h5 class="card-title" style="text-align: center">
+              TPHCM -> HÀ NỘI
+            </h5>
+            <p class="card-text" style="text-align: center">
+              Giá từ: 1.200.000 (QH 067)
+            </p>
+            <p class="card-text" style="text-align: center">
+              Khởi hành: 3:00 8/12/2025
+            </p>
+          </div>
+        </div>
+        <div class="card" style="width: 18rem">
+          <div class="card-body">
+            <h5 class="card-title" style="text-align: center">
+              TPHCM -> CÔN ĐẢO
+            </h5>
+            <p class="card-text" style="text-align: center">
+              Giá từ: 770.000 (QH 369)
+            </p>
+            <p class="card-text" style="text-align: center">
+              Khởi hành: 21:00 10/12/2025
+            </p>
+          </div>
+        </div>
+        <div class="card" style="width: 18rem">
+          <div class="card-body">
+            <h5 class="card-title" style="text-align: center">
+              HÀ NỘI -> ĐÀ LẠT
+            </h5>
+            <p class="card-text" style="text-align: center">
+              Giá từ: 1.100.000 (QH 436)
+            </p>
+            <p class="card-text" style="text-align: center">
+              Khởi hành: 14:00 9/12/2025
+            </p>
+          </div>
+        </div>
+      </div>
       <footer>
         <div class="main-footer">
           <div class="slogan-and-logo-footer">
